--- a/package.json
+++ b/package.json
@@ -1,28 +1,14 @@
 {
-  "name": "parcel-project-template",
-  "version": "1.1.0",
-  "description": "",
-  "homepage": "https://mrbabet.github.io/IceCream/",
+  "name": "icecream",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /IceCream/"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/migace/parcel-project-template-pl-main.git"
-  },
-  "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/migace/parcel-project-template-pl-main/issues"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@parcel/transformer-sass": "^2.8.3",
-    "parcel": "^2.8.3",
-    "posthtml-include": "^1.7.4"
-  },
-  "dependencies": {
-    "modern-normalize": "^2.0.0"
+    "vite": "^4.4.5"
   }
 }
