--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "modern-normalize": "^2.0.0",
+    "vite-plugin-handlebars": "^1.6.0"
   }
 }
